--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "dependencies": {
     "babel-polyfill": "^6.6.1",
     "babel-register": "^6.6.5",
+    "css-loader": "^0.23.1",
     "express": "^4.13.4",
+    "node-sass": "^3.4.2",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
     "redux": "^3.3.1",
     "redux-thunk": "^2.0.1",
-    "serve-static": "^1.10.2"
+    "sass-loader": "^3.1.2",
+    "serve-static": "^1.10.2",
+    "style-loader": "^0.13.0"
   },
   "devDependencies": {
     "babel-core": "^6.6.5",
