--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-register": "^6.6.5",
     "css-loader": "^0.23.1",
     "express": "^4.13.4",
+    "moment": "^2.12.0",
     "node-sass": "^3.4.2",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
