--- a/package.json
+++ b/package.json
@@ -28,17 +28,17 @@
     "redux-thunk": "^2.0.1",
     "sass-loader": "^3.1.2",
     "serve-static": "^1.10.2",
-    "style-loader": "^0.13.0"
-  },
-  "devDependencies": {
+    "style-loader": "^0.13.0",
     "babel-core": "^6.6.5",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-runtime": "^6.6.1",
     "file-loader": "^0.8.5",
     "webpack": "^1.12.14",
+  },
+  "devDependencies": {
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-runtime": "^6.6.1",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.9.1"
   },
