--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "sass-loader": "^3.1.2",
     "serve-static": "^1.10.2",
     "style-loader": "^0.13.0",
-    "webpack": "^1.12.14",
+    "webpack": "^1.12.14"
   },
   "babel": {
     "presets": [
